[master] Corrections and improvements