@@ -1,13 +1,10 @@
 package fr.arolla.greenmove.human;
 
 import fr.arolla.greenmove.scooter.Country;
-import fr.arolla.greenmove.scooter.Currency;
 import fr.arolla.greenmove.scooter.Provider;
 import fr.arolla.greenmove.scooter.Scooter;
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -17,12 +14,12 @@ public class JuicerTest {
 
     @Test
     public void should_group_scooters_in_a_list_of_2_elements_when_there_are_2_providers() {
-        final var allowedProviders = Arrays.asList(Provider.BIRD, Provider.LIME);
-        final var scooter = new Scooter(1, Provider.BIRD, Country.FR, Currency.EUR);
-        final var scooter2 = new Scooter(2, Provider.BIRD, Country.FR, Currency.EUR);
-        final var scooter3 = new Scooter(3, Provider.LIME, Country.FR, Currency.EUR);
+        final var allowedProviders = List.of(Provider.BIRD, Provider.LIME);
+        final var scooter = new Scooter(1, Provider.BIRD, Country.FR, 0);
+        final var scooter2 = new Scooter(2, Provider.BIRD, Country.FR, 0);
+        final var scooter3 = new Scooter(3, Provider.LIME, Country.FR, 0);
 
-        final List<Scooter> rawScooters = new ArrayList<>(Arrays.asList(scooter, scooter2, scooter3));
+        final var rawScooters = List.of(scooter, scooter2, scooter3);
 
         final var juicer = new Juicer().setAllowedProviders(allowedProviders);
 
@@ -41,10 +38,10 @@ public class JuicerTest {
     @Test
     public void should_group_scooters_in_a_list_when_there_is_only_1_provider() {
         final var allowedProviders = Collections.singletonList(Provider.BIRD);
-        final var scooter = new Scooter(1, Provider.BIRD, Country.FR, Currency.EUR);
-        final var scooter2 = new Scooter(2, Provider.BIRD, Country.FR, Currency.EUR);
+        final var scooter = new Scooter(1, Provider.BIRD, Country.FR, 0);
+        final var scooter2 = new Scooter(2, Provider.BIRD, Country.FR, 0);
 
-        final List<Scooter> rawScooters = new ArrayList<>(Arrays.asList(scooter, scooter2));
+        final var rawScooters = List.of(scooter, scooter2);
 
         final var juicer = new Juicer().setAllowedProviders(allowedProviders);
 
